# ranx

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake-multi-platform.yml  gh-pages.yml
binder/: Dockerfile
cmake/: ranx-config.cmake.in
doc/codes/: CMakeLists.txt  rand_10-100_v8.cpp
docs/: 01_randomness_primer.md  02_serial_random_number_generation.md  03_parallel_random_number_generation.md  04_working_with_ranx.md  conf.py  distributions.md  index.md  myst.yml  quickstart.md  ranx_utility.md
docs/notebooks/: 01_randomness_primer.md  02_serial_random_number_generation.md  03_parallel_random_number_generation.md  04_working_with_ranx.md
example/: CMakeLists.txt  README.md  rand100.cu  rand100_oneapi.cpp  rand100_openmp.cpp  rand100_rocm.cpp
include/: utility.hpp
include/p2rng/algorithm/: generate.hpp
include/ranx/: bind.hpp  device.hpp  random  ranx.hpp
include/ranx/algorithm/: generate.hpp
include/ranx/pcg/: pcg_extras.hpp  pcg_random.hpp
include/ranx/trng/: bernoulli_dist.hpp  beta_dist.hpp  binomial_dist.hpp  cauchy_dist.hpp  chi_square_dist.hpp  correlated_normal_dist.hpp  discrete_dist.hpp  exponential_dist.hpp  extreme_value_dist.hpp  fast_discrete_dist.hpp  gamma_dist.hpp  geometric_dist.hpp  hypergeometric_dist.hpp  int_math.hpp  limits.hpp  logistic_dist.hpp  lognormal_dist.hpp  math.hpp  maxwell_dist.hpp  negative_binomial_dist.hpp  normal_dist.hpp  pareto_dist.hpp  poisson_dist.hpp  powerlaw_dist.hpp  rayleigh_dist.hpp  snedecor_f_dist.hpp  special_functions.hpp  student_t_dist.hpp  tent_dist.hpp  truncated_normal_dist.hpp  twosided_exponential_dist.hpp  uniform01_dist.hpp  uniform_dist.hpp  uniform_int_dist.hpp  uniformxx.hpp  utility.hpp  weibull_dist.hpp  zero_truncated_poisson_dist.hpp
perf/: CMakeLists.txt  benchmarks_cuda.cu  benchmarks_oneapi.cpp  benchmarks_openmp.cpp  benchmarks_rocm.cpp
perf/results/: a100_cuda.txt  epic7543_openmp.txt  mi210_rocm.txt
src/: CMakeLists.txt  README.md  ranx.1  ranx.cpp
test/: CMakeLists.txt  unit_tests_cuda.cu  unit_tests_oneapi.cpp  unit_tests_openmp.cpp  unit_tests_rocm.cpp
